5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1832_1642.log
== TEST (2019-06-13 19:08:09) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a+1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:08:53) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i + 1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:09:06) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i + 1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
1.39327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:09:07) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i + 1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
2.33234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:09:08) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i + 1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
1.91811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:35) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	   c=c+1
print(a)
print(vp)
-- ERROR:
File "XXXX", line 14
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:42) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
 c=c+1
print(a)
print(vp)
-- ERROR:
File "XXXX", line 14
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:46) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:09:50) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
0.944212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:07) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
	for v in t:
		if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
	for v in t:
		if(t%5==0):
		vp[i]=c
		i=i+1
c=c+1
print(a)
print(vp)
-- ERROR:
File "XXXX", line 4
    for v in t:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:17) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
	for v in t:
		if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
		if(t%5==0):
		vp[i]=c
		i=i+1
c=c+1
print(a)
print(vp)
-- ERROR:
File "XXXX", line 4
    for v in t:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:20) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
		if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
		if(t%5==0):
		vp[i]=c
		i=i+1
c=c+1
print(a)
print(vp)
-- ERROR:
File "XXXX", line 6
    a=a + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:34) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:12) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:15:18) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
0.926496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:15:19) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
1.98011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:25:08) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		a=a + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:26:15) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:26:58) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:27:09) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
1.50719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:27:10) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
2.58678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:27:10) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
3.90469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:27:11) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
5.60881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:27:11) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
7.88832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:27:11) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
6.80501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 5, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:33:18) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(t%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:35:57) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:35:57) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(t%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
0.977122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 11, in <module>
    if(t%5==0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:11) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:13) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(a)
print(vp)
-- EXECUTION TIME:
0.83622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 15, in <module>
    print(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:31) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(p)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:32) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(p)
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:32) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(p)
print(vp)
-- EXECUTION TIME:
0.909526
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
numero de launos4
[0 1 3 7]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:41) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(p)
print(vp)
-- EXECUTION TIME:
0.738802
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:45) 
-- CODE:
from numpy import *
t=array(eval(input("numero de launos")))
p=0 
for v in t:
	if(v%5==0):
		p=p + 1
vp=zeros(p, dtype=int)
i=0
c=0
for v in t:
	if(v%5==0):
		vp[i]=c
		i=i+1
	c=c+1
print(p)
print(vp)
-- EXECUTION TIME:
1.15159
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
